chore(tests): refactor assertions and remove unused ID fields in storage info classes